Minor syntax changes

--- a/Geospatial Bootstrap.ipynb
+++ b/Geospatial Bootstrap.ipynb
@@ -22,11 +22,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-03T08:20:40.879519Z",
-     "start_time": "2021-05-03T08:20:40.121300Z"
+     "end_time": "2021-05-20T06:35:50.992476Z",
+     "start_time": "2021-05-20T06:35:50.081249Z"
     }
    },
    "outputs": [],
@@ -183,9 +183,9 @@
    "source": [
     "# Read shapefile (.shp) locally\n",
     "\n",
-    "shapefile_abs_path = \"<ABSOLUTE_PATH_TO_SHAPEFILE>\"\n",
+    "shapefile_path = \"<PATH_TO_SHAPEFILE>\"\n",
     "\n",
-    "gdf = gpd.read_file(shapefile_abs_path)"
+    "gdf = gpd.read_file(shapefile_path)"
    ]
   },
   {
@@ -202,10 +202,10 @@
    "source": [
     "# Read a shapefile (.shp) locally from inside a zip file\n",
     "\n",
-    "zipfile_abs_path = \"<ABSOLUTE_PATH_TO_ZIPFILE>\"\n",
+    "zipfile_path = \"<PATH_TO_ZIPFILE>\"\n",
     "shapefile_name = \"<SHP_FILE_INSIDE_ZIP>\"\n",
     "\n",
-    "gdf = gpd.read_file(\"zip://\" + zipfile_abs_path + \"!\" + shapefile_name)"
+    "gdf = gpd.read_file(\"zip://\" + zipfile_path + \"!\" + shapefile_name)"
    ]
   },
   {
@@ -461,19 +461,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2021-05-03T10:01:23.313913Z",
-     "start_time": "2021-05-03T10:01:22.823984Z"
+     "end_time": "2021-05-20T06:35:56.791248Z",
+     "start_time": "2021-05-20T06:35:56.275000Z"
     }
    },
    "outputs": [],
    "source": [
-    "zipfile_abs_path = \"data/administration_boundaries.zip\"\n",
+    "zipfile_path = \"data/administration_boundaries.zip\"\n",
     "shapefile_name = \"bm5mv21sh0tpm1_20200601_0.shp\"\n",
     "\n",
-    "gdf = gpd.read_file(\"zip://\" + zipfile_abs_path + \"!\" + shapefile_name)"
+    "gdf = gpd.read_file(\"zip://\" + zipfile_path + \"!\" + shapefile_name)"
    ]
   },
   {
